tests/snapshots/parse_compound__snapshot_anomaly.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    Anomaly:
      field: duration
      compared_to: Fleet
      data_source: ~
  scope: ~
  time_range:
    Since:
      Relative:
        amount: 24
        unit: hours
  time_basis: ~
  conditions: ~
  facet:
    dimension: robot_id
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
