tests/snapshots/parse_compound__snapshot_anomaly_last_24h.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    Anomaly:
      field: duration
      compared_to: Last24Hours
      data_source: ~
  scope: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: hour
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
