tests/snapshots/parse_compound__snapshot_health.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause: Health
  scope:
    robot:
      Single: robot_42
    version: ~
    environment: ~
    session: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: hour
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
