tests/snapshots/parse_compound__snapshot_health_faceted.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause: Health
  scope: ~
  time_range:
    Since:
      Relative:
        amount: 30
        unit: minutes
  time_basis: ~
  conditions: ~
  facet:
    dimension: robot_id
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
