tests/snapshots/parse_compound__snapshot_joint_deviation_for_trace.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    JointDeviation:
      target:
        Trace: abc
  scope: ~
  time_range: ~
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
