tests/snapshots/parse_compound__snapshot_message_flow_to_node.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    MessageFlow:
      from_topic: /scan
      to_target:
        Node: /local_costmap_node
      show: ~
  scope: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: day
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
